--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+res/values/app_config.xml
 
 # Eclipse project files
 .classpath
