--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name="org.missionassetfund.apps.android.MAFApplication"
+        android:name=".MAFApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.missionassetfund.apps.android.activities.MAFDispatchActivity"
+            android:name=".activities.MAFDispatchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,9 +53,13 @@
                 android:value="@string/parse_login_button_text" />
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
+        </activity>
+        <activity
+            android:name=".activities.LiquidAssetsActivity"
+            android:label="@string/title_activity_liquid_assets" >
         </activity>
     </application>
 
