--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,7 +54,7 @@
         </activity>
         <activity
             android:name="org.missionassetfund.apps.android.activities.MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/label_dashboard_title"
             android:launchMode="singleTop" >
         </activity>
         <activity
