--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name=".MAFApplication"
+        android:name="org.missionassetfund.apps.android.MAFApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.MAFDispatchActivity"
+            android:name="org.missionassetfund.apps.android.activities.MAFDispatchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,37 +53,41 @@
                 android:value="@string/parse_login_button_text" />
         </activity>
         <activity
-            android:name=".activities.MainActivity"
+            android:name="org.missionassetfund.apps.android.activities.MainActivity"
             android:label="@string/label_dashboard_title"
             android:launchMode="singleTop" >
         </activity>
         <activity
-            android:name=".activities.LiquidAssetsActivity"
+            android:name="org.missionassetfund.apps.android.activities.LiquidAssetsActivity"
             android:label="@string/title_liquid_asset"
-            android:parentActivityName=".activities.MainActivity" >
+            android:parentActivityName="org.missionassetfund.apps.android.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
         </activity>
         <activity
-            android:name=".activities.GoalDetailsActivity"
+            android:name="org.missionassetfund.apps.android.activities.GoalDetailsActivity"
             android:label="@string/title_goal_details"
-            android:parentActivityName=".activities.MainActivity" >
+            android:parentActivityName="org.missionassetfund.apps.android.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
         </activity>
         <activity
-            android:name=".activities.AddTransactionActivity"
+            android:name="org.missionassetfund.apps.android.activities.AddTransactionActivity"
             android:label="@string/title_activity_add_transaction" >
         </activity>
         <activity
-            android:name=".activities.EditProfileActivity"
+            android:name="org.missionassetfund.apps.android.activities.EditProfileActivity"
             android:label="@string/title_activity_edit_profile"
-            android:parentActivityName=".activities.MainActivity" >
+            android:parentActivityName="org.missionassetfund.apps.android.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
+        </activity>
+        <activity
+            android:name="org.missionassetfund.apps.android.activities.NewGoalActivity"
+            android:label="@string/title_activity_new_goal" >
         </activity>
     </application>
 
