--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,13 +23,13 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name="org.missionassetfund.apps.android.MAFApplication"
+        android:name=".MAFApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.missionassetfund.apps.android.activities.MAFDispatchActivity"
+            android:name=".activities.MAFDispatchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -64,40 +64,40 @@
                 android:value="@string/parse_login_button_text" />
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/label_dashboard_title"
             android:launchMode="singleTop" >
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.LiquidAssetsActivity"
+            android:name=".activities.LiquidAssetsActivity"
             android:label="@string/title_liquid_asset"
-            android:parentActivityName="org.missionassetfund.apps.android.activities.MainActivity" >
+            android:parentActivityName=".activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.GoalDetailsActivity"
+            android:name=".activities.GoalDetailsActivity"
             android:label="@string/title_goal_details"
-            android:parentActivityName="org.missionassetfund.apps.android.activities.MainActivity" >
+            android:parentActivityName=".activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.AddTransactionActivity"
+            android:name=".activities.AddTransactionActivity"
             android:label="@string/title_activity_add_transaction" >
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.EditProfileActivity"
+            android:name=".activities.EditProfileActivity"
             android:label="@string/title_activity_edit_profile"
-            android:parentActivityName="org.missionassetfund.apps.android.activities.MainActivity" >
+            android:parentActivityName=".activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
         </activity>
         <activity
-            android:name="org.missionassetfund.apps.android.activities.NewGoalActivity"
+            android:name=".activities.NewGoalActivity"
             android:label="@string/title_activity_new_goal" >
         </activity>
 
@@ -117,6 +117,13 @@
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
                 <category android:name="org.missionassetfund.apps.android" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="org.missionassetfund.apps.android.receivers.PushNotificationReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="org.missionassetfund.apps.android.ADD_TRANSACTION" />
             </intent-filter>
         </receiver>
     </application>
