Add initial user flow
This flow will ask the user for its initial cash balance to have an starting point.

It marks the user setup property to true and creates its first transaction with the cash balance.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,7 +67,8 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/label_dashboard_title"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
             android:name=".activities.LiquidAssetsActivity"
