--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@android:color/transparent"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true" >
         <activity
             android:name=".activities.MAFDispatchActivity"
             android:label="@string/app_name" >
