--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,11 +25,11 @@
     <application
         android:name=".MAFApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@android:color/transparent"
-        android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.MAFDispatchActivity"
             android:label="@string/app_name" >
@@ -42,7 +42,8 @@
         <activity
             android:name="com.parse.ui.ParseLoginActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="com.parse.ui.ParseLoginActivity.APP_LOGO"
                 android:resource="@drawable/logo" />
@@ -69,12 +70,14 @@
             android:name=".activities.MainActivity"
             android:label="@string/label_dashboard_title"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
             android:name=".activities.LiquidAssetsActivity"
             android:label="@string/title_liquid_asset"
-            android:parentActivityName=".activities.MainActivity" >
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
@@ -82,7 +85,8 @@
         <activity
             android:name=".activities.GoalDetailsActivity"
             android:label="@string/title_goal_details"
-            android:parentActivityName=".activities.MainActivity" >
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
@@ -90,12 +94,14 @@
         <activity
             android:name=".activities.AddTransactionActivity"
             android:label="@string/title_activity_add_transaction"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.SelectDate" >
         </activity>
         <activity
             android:name=".activities.EditProfileActivity"
             android:label="@string/title_activity_edit_profile"
-            android:parentActivityName=".activities.MainActivity" >
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.missionassetfund.apps.activities.MainActivity" />
@@ -103,11 +109,13 @@
         <activity
             android:name=".activities.NewGoalActivity"
             android:label="@string/title_activity_new_goal"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.SelectDate" >
         </activity>
         <activity
             android:name=".activities.AddGoalPaymentActivity"
-            android:label="@string/label_goal_payment" >
+            android:label="@string/label_goal_payment"
+            android:screenOrientation="portrait" >
         </activity>
 
         <service android:name="com.parse.PushService" />
