Added library for floating point button and circlular image

--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,4 @@ target=android-19
 android.library.reference.1=third-party-libs/HoloGraphLibrary
 android.library.reference.2=third-party-libs/facebook-sdk/facebook
 android.library.reference.3=third-party-libs/JakeWharton-Android-ViewPagerIndicator-8cd549f/library
+android.library.reference.4=third-party-libs/FloatingActionButton/FloatingActionButton
