--- a/third-party-libs/FloatingActionButton/FloatingActionButton/AndroidManifest.xml
+++ b/third-party-libs/FloatingActionButton/FloatingActionButton/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.faizmalkani.floatingactionbutton">
 
+    <uses-sdk android:minSdkVersion="13" />
+    
     <application
         android:allowBackup="true">
 
