Add Circular Progress Bar library

--- a/third-party-libs/circular_progress_bar/project.properties
+++ b/third-party-libs/circular_progress_bar/project.properties
@@ -12,9 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=third-party-libs/HoloGraphLibrary
-android.library.reference.2=third-party-libs/facebook-sdk/facebook
-android.library.reference.3=third-party-libs/TwoWayView
-android.library.reference.4=third-party-libs/FloatingActionButton/FloatingActionButton
-android.library.reference.5=third-party-libs/circular_progress_bar
-android.library.reference.6=third-party-libs/JakeWharton-Android-ViewPagerIndicator-8cd549f/library
+android.library=true
