--- a/project.properties
+++ b/project.properties
@@ -18,3 +18,4 @@ android.library.reference.3=third-party-libs/TwoWayView
 android.library.reference.4=third-party-libs/FloatingActionButton/FloatingActionButton
 android.library.reference.5=third-party-libs/circular_progress_bar
 android.library.reference.6=third-party-libs/JakeWharton-Android-ViewPagerIndicator-8cd549f/library
+android.library.reference.7=third-party-libs/ParallaxScroll/ParallaxScroll
