--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -153,8 +153,9 @@
 
         <activity
             android:name="org.missionassetfund.apps.android.activities.LCDetailsActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/title_activity_lcdetails" >
+            android:label="@string/title_activity_lcdetails"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
     </application>
 
