--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.MAFDispatchActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
